update: fix bug for predict model and generate learning path