@@ -2,6 +2,8 @@ package com.hcmut.lms.personalization.application.service.impl.learning_path;
 
 import com.hcmut.lms.personalization.application.service.impl.LearningPathSchedulingService.SemesterSlot;
 import com.hcmut.lms.personalization.application.service.impl.LearningPathSchedulingService.SubjectCandidate;
+import com.hcmut.lms.personalization.application.service.impl.support.SemesterClassifier;
+import com.hcmut.lms.personalization.application.service.impl.support.SubjectCreditUtil;
 import com.hcmut.lms.personalization.application.service.impl.validation.StudentProgressDataService;
 import com.hcmut.lms.personalization.client.LearningServiceClient;
 import com.hcmut.lms.personalization.client.dto.*;
@@ -38,21 +40,21 @@ public class LearningPathPersistenceService {
       List<SemesterSlot> schedule,
       String riskLevel,
       StudentProgressDataService.StudentProgressData progressData,
-      int effectiveCompletedCredits) {
+      int effectiveCompletedCredits,
+      List<SemesterResponse> pastSemesters) {
 
     int scheduledCredits = schedule.stream().mapToInt(SemesterSlot::getTotalCredits).sum();
     int completedCredits = Math.max(0, effectiveCompletedCredits);
-    int totalCredits = scheduledCredits + completedCredits;
+    int learningPathTotalCredits = scheduledCredits + completedCredits;
 
-    // Single batch prediction call — reuse for both per-subject grades and GPA
     Map<UUID, Double> predictedGradesBySubjectId = buildPredictedGradesMap(schedule, studentId);
-    BigDecimal predictedGpa = calculatePredictedGpaFromMap(schedule, predictedGradesBySubjectId);
+    BigDecimal predictedGpa = calculatePredictedGpaFromMap(schedule, predictedGradesBySubjectId, progressData);
 
     LearningPath path = LearningPath.builder()
         .studentId(studentId)
         .learningGoalId(learningGoalId)
         .curriculumCode(curriculumCode)
-        .totalCredits(totalCredits)
+        .totalCredits(learningPathTotalCredits)
         .estimatedDurationSemesters(schedule.size())
         .predictedGpa(predictedGpa)
         .completionRate(BigDecimal.ZERO)
@@ -63,7 +65,7 @@ public class LearningPathPersistenceService {
     LearningPath savedPath = learningPathRepository.save(path);
     log.info("Saved learning path with id={}", savedPath.getLearningPathId());
 
-    persistSectionsAndSubjects(savedPath, schedule, progressData, predictedGradesBySubjectId);
+    persistSectionsAndSubjects(savedPath, schedule, progressData, predictedGradesBySubjectId, pastSemesters);
 
     return savedPath;
   }
@@ -71,55 +73,98 @@ public class LearningPathPersistenceService {
   private void persistSectionsAndSubjects(
       LearningPath path, List<SemesterSlot> schedule,
       StudentProgressDataService.StudentProgressData progressData,
-      Map<UUID, Double> predictedGradesBySubjectId) {
+      Map<UUID, Double> predictedGradesBySubjectId,
+      List<SemesterResponse> pastSemesters) {
     log.info("Persisting sections and subjects for path={}", path.getLearningPathId());
 
     List<LearningPathSection> sections = new ArrayList<>();
     List<LearningPathSubject> allSubjects = new ArrayList<>();
 
-    List<Map.Entry<CompletedSectionKey, List<StudentProgressDataService.CompletedSubjectDetail>>> completedSections =
+    // Build a lookup of completed subjects by (academicYearId, semesterId)
+    Map<CompletedSectionKey, List<StudentProgressDataService.CompletedSubjectDetail>> completedBySectionKey =
         progressData.completedSubjects()
             .stream()
-            .collect(Collectors.groupingBy(this::toCompletedSectionKey, LinkedHashMap::new, Collectors.toList()))
-            .entrySet()
-            .stream()
-            .sorted(Comparator.comparingInt(entry -> resolveCompletedSemesterOrder(entry.getValue())))
-            .toList();
+            .collect(Collectors.groupingBy(this::toCompletedSectionKey, LinkedHashMap::new, Collectors.toList()));
 
-    for (Map.Entry<CompletedSectionKey, List<StudentProgressDataService.CompletedSubjectDetail>> completedSection :
-        completedSections) {
-      List<StudentProgressDataService.CompletedSubjectDetail> completedSubjects = completedSection.getValue();
+    // Build the full past timeline: include all past main semesters (even empty),
+    // skip empty past summer semesters.
+    List<PastSectionData> pastTimeline = new ArrayList<>();
+    if (pastSemesters != null && !pastSemesters.isEmpty()) {
+      for (SemesterResponse semester : pastSemesters) {
+        CompletedSectionKey key = new CompletedSectionKey(semester.getAcademicYearId(), semester.getId());
+        List<StudentProgressDataService.CompletedSubjectDetail> completed =
+            completedBySectionKey.getOrDefault(key, List.of());
+        boolean isSummer = SemesterClassifier.isSummerSemester(semester);
+
+        // Skip empty summer semesters; keep all main semesters (even empty)
+        if (isSummer && completed.isEmpty()) {
+          continue;
+        }
+
+        pastTimeline.add(new PastSectionData(semester, completed));
+      }
+    } else {
+      // Fallback: if no past semester data, use the old behavior (only semesters with completed subjects)
+      completedBySectionKey.entrySet().stream()
+          .sorted(Comparator.comparingInt(e -> resolveCompletedSemesterOrder(e.getValue())))
+          .forEachOrdered(entry ->
+              pastTimeline.add(new PastSectionData(null, entry.getValue())));
+    }
+
+    // Build sections from the past timeline
+    Map<UUID, Integer> academicYearOrderByAcademicYearId = new LinkedHashMap<>();
+    int semesterOrderCounter = 1;
+    int academicYearOrderCounter = 1;
+
+    for (PastSectionData pastSection : pastTimeline) {
+      SemesterResponse semester = pastSection.semester();
+      List<StudentProgressDataService.CompletedSubjectDetail> completedSubjects = pastSection.completedSubjects();
+
+      UUID academicYearId;
+      UUID semesterId;
+      int academicYearOrder;
+
+      if (semester != null) {
+        academicYearId = semester.getAcademicYearId();
+        semesterId = semester.getId();
+        if (!academicYearOrderByAcademicYearId.containsKey(academicYearId)) {
+          academicYearOrderByAcademicYearId.put(academicYearId, academicYearOrderCounter++);
+        }
+        academicYearOrder = academicYearOrderByAcademicYearId.get(academicYearId);
+      } else {
+        // Fallback: derive from completed subjects
+        academicYearId = completedSubjects.stream()
+            .map(StudentProgressDataService.CompletedSubjectDetail::academicYearId)
+            .filter(Objects::nonNull)
+            .findFirst().orElse(null);
+        semesterId = completedSubjects.stream()
+            .map(StudentProgressDataService.CompletedSubjectDetail::semesterId)
+            .filter(Objects::nonNull)
+            .findFirst().orElse(null);
+        academicYearOrder = resolveCompletedAcademicYearOrder(completedSubjects);
+        if (academicYearId != null && !academicYearOrderByAcademicYearId.containsKey(academicYearId)) {
+          academicYearOrderByAcademicYearId.put(academicYearId, academicYearOrder);
+        }
+      }
+
+      int totalCredits = completedSubjects.stream()
+          .mapToInt(SubjectCreditUtil::safeCompletedCredits).sum();
+
       LearningPathSection section = LearningPathSection.builder()
           .learningPathId(path.getLearningPathId())
-          .academicYearId(completedSection.getKey().academicYearId())
-          .academicYearOrder(resolveCompletedAcademicYearOrder(completedSubjects))
-          .semesterId(completedSection.getKey().semesterId())
-          .semesterOrder(resolveCompletedSemesterOrder(completedSubjects))
-          .totalCredits(completedSubjects.stream().mapToInt(this::safeCompletedCredits).sum())
+          .academicYearId(academicYearId)
+          .academicYearOrder(academicYearOrder)
+          .semesterId(semesterId)
+          .semesterOrder(semesterOrderCounter++)
+          .totalCredits(totalCredits)
           .difficultyScore(BigDecimal.ZERO)
           .build();
       sections.add(section);
     }
 
-    int completedSectionCount = completedSections.size();
-    // Use count of completed sections as offset rather than max semesterOrder.
-    // This avoids gaps when completed semesterOrders are non-contiguous
-    // (e.g., [1, 2, 10] would create an offset of 10 instead of the intended 3).
-    int completedSemesterOrderOffset = completedSectionCount;
+    int completedSemesterOrderOffset = pastTimeline.size();
 
-    // Build academicYearOrder map starting from completed sections' academic years,
-    // so that scheduled semesters sharing an academicYearId with completed sections
-    // reuse the same academicYearOrder (e.g., summer HK233 shares year with HK231/HK232).
-    // Then extend for new academic years in the schedule with incrementing orders.
-    Map<UUID, Integer> academicYearOrderByAcademicYearId = new LinkedHashMap<>();
-    for (Map.Entry<CompletedSectionKey, List<StudentProgressDataService.CompletedSubjectDetail>> completedSection : completedSections) {
-      UUID academicYearId = completedSection.getKey().academicYearId();
-      int order = resolveCompletedAcademicYearOrder(completedSection.getValue());
-      if (!academicYearOrderByAcademicYearId.containsKey(academicYearId)) {
-        academicYearOrderByAcademicYearId.put(academicYearId, order);
-      }
-    }
-
+    // Extend academicYearOrder map for new academic years in the schedule
     int nextYearOrder = academicYearOrderByAcademicYearId.values().stream()
         .max(Integer::compareTo)
         .orElse(0) + 1;
@@ -155,50 +200,57 @@ public class LearningPathPersistenceService {
     }
 
     List<LearningPathSection> savedSections = learningPathSectionRepository.saveAll(sections);
-    log.info("Saved {} sections (including {} completed)", savedSections.size(), completedSectionCount);
+    log.info("Saved {} sections ({} past, {} scheduled)", savedSections.size(), pastTimeline.size(), schedule.size());
 
-    for (int sectionIndex = 0; sectionIndex < completedSections.size(); sectionIndex++) {
-      LearningPathSection savedCompletedSection = savedSections.get(sectionIndex);
-      List<StudentProgressDataService.CompletedSubjectDetail> sortedCompleted = completedSections.get(sectionIndex)
-          .getValue()
-          .stream()
+    // Persist completed subjects from the past timeline
+    for (int i = 0; i < pastTimeline.size(); i++) {
+      LearningPathSection savedSection = savedSections.get(i);
+      List<StudentProgressDataService.CompletedSubjectDetail> completedSubjects = pastTimeline.get(i).completedSubjects();
+      if (completedSubjects == null || completedSubjects.isEmpty()) {
+        continue;  // Empty past section — no subjects to persist
+      }
+
+      List<StudentProgressDataService.CompletedSubjectDetail> sortedCompleted = completedSubjects.stream()
           .sorted(Comparator.comparingInt(s -> s.studyOrder() != null ? s.studyOrder() : Integer.MAX_VALUE))
           .toList();
 
       for (StudentProgressDataService.CompletedSubjectDetail completedSubject : sortedCompleted) {
-        int completedCredits = safeCompletedCredits(completedSubject);
+        int completedCredits = SubjectCreditUtil.safeCompletedCredits(completedSubject);
 
         LearningPathSubject subject = LearningPathSubject.builder()
             .learningPathId(path.getLearningPathId())
-            .learningPathSectionId(savedCompletedSection.getLearningPathSectionId())
+            .learningPathSectionId(savedSection.getLearningPathSectionId())
             .subjectId(completedSubject.subjectId())
             .subjectCode(completedSubject.subjectCode())
             .subjectName(completedSubject.subjectName())
             .credits(completedCredits)
             .difficultyLevel("easy")
-            .avgPassRate(BigDecimal.ONE)
+            .avgPassRate(null)
             .avgGrade(
                 completedSubject.grade4() != null
                     ? BigDecimal.valueOf(completedSubject.grade4())
-                    : BigDecimal.valueOf(7.0))
+                    : null)
             .importanceScore(BigDecimal.ZERO)
             .prerequisitesGraph(Collections.emptyList())
-            .isCompleted(true)
+            .isCompleted(Boolean.TRUE.equals(completedSubject.isPassed()))
             .studyOrder(completedSubject.studyOrder())
             .completionGrade(completedSubject.grade4() != null ? BigDecimal.valueOf(completedSubject.grade4()) : null)
+            .attemptNo(completedSubject.attemptNo())
+            .isHighestResult(completedSubject.isHighestResult())
             .build();
 
         allSubjects.add(subject);
       }
     }
 
+    // Persist scheduled (future) subjects
     for (int i = 0; i < schedule.size(); i++) {
       SemesterSlot slot = schedule.get(i);
-      LearningPathSection section = savedSections.get(i + completedSectionCount);
+      LearningPathSection section = savedSections.get(i + pastTimeline.size());
 
       int studyOrderIndex = 1;
       for (SubjectCandidate candidate : slot.getSubjects()) {
-        Double predictedGrade = predictedGradesBySubjectId.getOrDefault(candidate.getSubjectId(), DEFAULT_PREDICTED_GRADE_4PT);
+        Double predictedGrade = predictedGradesBySubjectId.get(candidate.getSubjectId());
 
         LearningPathSubject subject = LearningPathSubject.builder()
             .learningPathId(path.getLearningPathId())
@@ -206,15 +258,16 @@ public class LearningPathPersistenceService {
             .subjectId(candidate.getSubjectId())
             .subjectCode(candidate.getSubjectCode())
             .subjectName(candidate.getSubjectName())
-            .credits(safeCredits(candidate))
+            .credits(SubjectCreditUtil.safeCredits(candidate))
             .difficultyLevel("medium")
-            .avgPassRate(BigDecimal.valueOf(0.85))
-            .avgGrade(BigDecimal.valueOf(7.0))
+            .avgPassRate(null)
+            .avgGrade(null)
             .importanceScore(BigDecimal.valueOf(safePriority2(candidate)))
             .prerequisitesGraph(buildPrerequisiteGraph(candidate))
             .isCompleted(false)
+            .isHighestResult(true)
             .studyOrder(studyOrderIndex)
-            .predictedGrade(BigDecimal.valueOf(predictedGrade).setScale(2, RoundingMode.HALF_UP))
+            .predictedGrade(predictedGrade != null ? BigDecimal.valueOf(predictedGrade).setScale(2, RoundingMode.HALF_UP) : null)
             .build();
 
         allSubjects.add(subject);
@@ -293,9 +346,11 @@ public class LearningPathPersistenceService {
 
       return response.getPredictions()
           .stream()
+          .filter(pred -> pred.getCorrectedPredictedGrade() != null)
           .collect(Collectors.toMap(
               GradePredictionResponse::getSubjectId,
-              pred -> pred.getCorrectedPredictedGrade() != null ? pred.getCorrectedPredictedGrade() : DEFAULT_PREDICTED_GRADE_4PT));
+              GradePredictionResponse::getCorrectedPredictedGrade,
+              (a, b) -> b));
     } catch (Exception e) {
       log.warn("Failed to fetch predicted grades: {}", e.getMessage());
       return Collections.emptyMap();
@@ -308,22 +363,28 @@ public class LearningPathPersistenceService {
     return BigDecimal.valueOf(avgPriority / 2.0).setScale(2, RoundingMode.HALF_UP);
   }
 
-  private static final double DEFAULT_PREDICTED_GRADE_4PT = 2.5;
-
-  private BigDecimal calculatePredictedGpaFromMap(List<SemesterSlot> schedule, Map<UUID, Double> gradeMap) {
-    double totalWeightedGrade = 0.0;
-    int totalCredits = 0;
+  private BigDecimal calculatePredictedGpaFromMap(List<SemesterSlot> schedule, Map<UUID, Double> gradeMap,
+      StudentProgressDataService.StudentProgressData progressData) {
+    double totalWeightedGrade = progressData.currentGpa4() != null
+        ? progressData.currentGpa4().doubleValue() * progressData.earnedCredits()
+        : 0.0;
+    int gpaDenominatorCredits = progressData.earnedCredits();
 
     for (SemesterSlot slot : schedule) {
       for (SubjectCandidate candidate : slot.getSubjects()) {
-        double grade = gradeMap.getOrDefault(candidate.getSubjectId(), DEFAULT_PREDICTED_GRADE_4PT);
-        int credits = safeCredits(candidate);
-        totalWeightedGrade += grade * credits;
-        totalCredits += credits;
+        Double grade = gradeMap.get(candidate.getSubjectId());
+        if (grade != null) {
+          int credits = SubjectCreditUtil.safeCredits(candidate);
+          totalWeightedGrade += grade * credits;
+          gpaDenominatorCredits += credits;
+        }
       }
     }
 
-    double gpa = totalCredits > 0 ? totalWeightedGrade / totalCredits : DEFAULT_PREDICTED_GRADE_4PT;
+    if (gpaDenominatorCredits == 0) {
+      return null;
+    }
+    double gpa = totalWeightedGrade / gpaDenominatorCredits;
     return BigDecimal.valueOf(gpa).setScale(2, RoundingMode.HALF_UP);
   }
 
@@ -343,40 +404,6 @@ public class LearningPathPersistenceService {
         .collect(Collectors.toList());
   }
 
-  private int safeCredits(SubjectCandidate candidate) {
-    Integer credits = candidate.getCredits();
-    if (credits == null) {
-      return 0;
-    }
-    if (credits < 0) {
-      throw new IllegalStateException(
-          "Invalid subject credits while persisting path: subjectId="
-              + candidate.getSubjectId()
-              + ", subjectCode="
-              + candidate.getSubjectCode()
-              + ", credits="
-              + credits);
-    }
-    return credits;
-  }
-
-  private int safeCompletedCredits(StudentProgressDataService.CompletedSubjectDetail subject) {
-    Integer credits = subject.credits();
-    if (credits == null) {
-      return 0;
-    }
-    if (credits < 0) {
-      throw new IllegalStateException(
-          "Invalid completed subject credits while persisting path: subjectId="
-              + subject.subjectId()
-              + ", subjectCode="
-              + subject.subjectCode()
-              + ", credits="
-              + credits);
-    }
-    return credits;
-  }
-
   private int safePriority1(SubjectCandidate candidate) {
     return candidate.getPriority1() != null ? candidate.getPriority1() : 999;
   }
@@ -386,6 +413,11 @@ public class LearningPathPersistenceService {
   }
 
   private record CompletedSectionKey(UUID academicYearId, UUID semesterId) {
+  }
+
+  private record PastSectionData(
+      SemesterResponse semester,
+      List<StudentProgressDataService.CompletedSubjectDetail> completedSubjects) {
   }
 }
 
